RESOLVED FIXED87044
[Qt][WK2] EventSenderProxy::keyDown doesn't use the helper functions to send events
https://bugs.webkit.org/show_bug.cgi?id=87044
Summary [Qt][WK2] EventSenderProxy::keyDown doesn't use the helper functions to send ...
Hugo Parente Lima
Reported 2012-05-21 13:57:31 PDT
EventSenderProxy::keyDown doesn't use the helper functions to send events, instead of call sendOrQueueEvent it calls m_testController->mainWebView()->sendEvent(&event).
Attachments
Patch (3.14 KB, patch)
2012-05-21 14:07 PDT, Hugo Parente Lima
no flags
Patch (3.15 KB, patch)
2012-05-21 14:22 PDT, Hugo Parente Lima
no flags
Patch (1.83 KB, patch)
2012-05-21 14:39 PDT, Hugo Parente Lima
no flags
Archive of layout-test-results from ec2-cr-linux-04 (690.39 KB, application/zip)
2012-05-21 17:48 PDT, WebKit Review Bot
no flags
Archive of layout-test-results from ec2-cq-03 (903.11 KB, application/zip)
2012-05-21 20:01 PDT, WebKit Review Bot
no flags
Hugo Parente Lima
Comment 1 2012-05-21 14:07:13 PDT
Alexis Menard (darktears)
Comment 2 2012-05-21 14:15:18 PDT
Comment on attachment 143093 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=143093&action=review The #ifdef cleanup needs to go in a separate patch. He has nothing to do with the main content of the patch (especially that it is in a different file). > Tools/WebKitTestRunner/qt/EventSenderProxyQt.cpp:242 > + QEvent* pressEvent = new QKeyEvent(QEvent::KeyPress, code, modifiers, keyText); nitpick: Why modifying QKeyEvent to QEvent? Keep it specialized.
Hugo Parente Lima
Comment 3 2012-05-21 14:17:59 PDT
(In reply to comment #2) > (From update of attachment 143093 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=143093&action=review > > The #ifdef cleanup needs to go in a separate patch. He has nothing to do with the main content of the patch (especially that it is in a different file). > > > Tools/WebKitTestRunner/qt/EventSenderProxyQt.cpp:242 > > + QEvent* pressEvent = new QKeyEvent(QEvent::KeyPress, code, modifiers, keyText); > > nitpick: Why modifying QKeyEvent to QEvent? Keep it specialized. Because it don't need to be specialized besides it's used only in the next line =], but ok, I can change that.
Hugo Parente Lima
Comment 4 2012-05-21 14:22:40 PDT
Hugo Parente Lima
Comment 5 2012-05-21 14:39:04 PDT
WebKit Review Bot
Comment 6 2012-05-21 17:48:35 PDT
Comment on attachment 143099 [details] Patch Attachment 143099 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12739636 New failing tests: svg/animations/svgnumberoptionalnumber-animation-2.html
WebKit Review Bot
Comment 7 2012-05-21 17:48:40 PDT
Created attachment 143152 [details] Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Alexis Menard (darktears)
Comment 8 2012-05-21 17:57:00 PDT
Comment on attachment 143099 [details] Patch cq+ again as this parch only modify Qt bits.
WebKit Review Bot
Comment 9 2012-05-21 20:01:51 PDT
Comment on attachment 143099 [details] Patch Rejecting attachment 143099 [details] from commit-queue. New failing tests: svg/W3C-SVG-1.1/types-basicDOM-01-b.svg Full output: http://queues.webkit.org/results/12742433
WebKit Review Bot
Comment 10 2012-05-21 20:01:57 PDT
Created attachment 143177 [details] Archive of layout-test-results from ec2-cq-03 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: ec2-cq-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Alexis Menard (darktears)
Comment 11 2012-05-22 06:46:16 PDT
Comment on attachment 143099 [details] Patch Clearing flags on attachment: 143099 Committed r117964: <http://trac.webkit.org/changeset/117964>
Alexis Menard (darktears)
Comment 12 2012-05-22 06:46:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.