[Qt][WK2] EventSenderProxy::keyDown doesn't use the helper functions to send events https://bugs.webkit.org/show_bug.cgi?id=87044

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-05-22
Reviewed by Alexis Menard.

Use sendOrQueueEvent instead of m_testController->mainWebView()->sendEvent

* WebKitTestRunner/qt/EventSenderProxyQt.cpp:
(WTR::EventSenderProxy::keyDown):


Canonical link: https://commits.webkit.org/104816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117964 268f45cc-cd09-0410-ab3c-d52691b4dbfc